Changed process execution... still doesn't seem to be working though.